introduced number fields replacing decimal and float field types

--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -26,6 +26,7 @@ _UI_BooleanField_type = Boolesches
 _UI_LengthField_type = Feld mit Länge
 _UI_AbstractIntegerField_type = Abstrakter Integer
 _UI_IntegerField_type = Ganzzahl
+_UI_NumberField_type = Nummer
 _UI_DecimalField_type = Dezimalzahl
 _UI_AbstractStringField_type = Abstrakter String
 _UI_StringField_type = String
@@ -297,8 +298,24 @@ _UI_IntegerField_range_feature = Bereich
 _UI_IntegerField_range_description = Ob dieses Feld einen Bereich repräsentiert oder nicht.
 _UI_IntegerField_version_feature = Version
 _UI_IntegerField_version_description = Ob dieses Feld die Version der Entität speichert oder nicht.
+_UI_NumberField_length_feature = Länge
+_UI_NumberField_length_description = Die Länge dieses Feldes.
+_UI_NumberField_scale_feature = Skalierung
+_UI_NumberField_scale_description = Die Skalierung.
+_UI_NumberField_aggregationField_feature = Aggregatsfeld
+_UI_NumberField_aggregationField_description = Ob dieses Feld aggregierte Werte speichern soll oder nicht. Wenn auf true gesetzt, werden zusätzliche Methoden zur Aggregation generiert.
+_UI_NumberField_minValue_feature = Min Wert
+_UI_NumberField_minValue_description = Minimaler Wert (0 zum Deaktivieren der Prüfung).
+_UI_NumberField_maxValue_feature = Max Wert
+_UI_NumberField_maxValue_description = Maximaler Wert (0 zum Deaktivieren der Prüfung).
+_UI_NumberField_currency_feature = Währung
+_UI_NumberField_currency_description = Wenn auf true gesetzt, wird diese Zahl als Währung behandelt.
+_UI_NumberField_percentage_feature = Prozentual
+_UI_NumberField_percentage_description = Ob dieses Feld einen prozentualen Wert repräsentiert oder nicht.
+_UI_NumberField_numberType_feature = Nummerntyp
+_UI_NumberField_numberType_description = Der Nummerntyp für dieses Feld.
 _UI_DecimalField_length_feature = Länge
-_UI_DecimalField_length_description = Die Länge (precision) dieses Feldes.
+_UI_DecimalField_length_description = Die Länge dieses Feldes.
 _UI_DecimalField_scale_feature = Skalierung
 _UI_DecimalField_scale_description = Die Skalierung.
 _UI_DecimalField_minValue_feature = Min Wert
@@ -626,6 +643,8 @@ _UI_HookProviderMode_ENABLED_SELF_literal = ENABLED_SELF
 _UI_AuthMethodType_NONE_literal = NONE
 _UI_AuthMethodType_REMOTE_literal = REMOTE
 _UI_AuthMethodType_LOCAL_literal = LOCAL
+_UI_NumberFieldType_DECIMAL_literal = DECIMAL
+_UI_NumberFieldType_FLOAT_literal = FLOAT
 _UI_StringIsbnStyle_NONE_literal = NONE
 _UI_StringIsbnStyle_ISBN10_literal = ISBN10
 _UI_StringIsbnStyle_ISBN13_literal = ISBN13
