--- a/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -150,15 +150,8 @@ MostDslValidator.FieldDateTimeDeprecatedDate=Datumsfelder sind veraltet. Verwend
 MostDslValidator.FieldDateTimeDeprecatedTime=Zeitfelder sind veraltet. Verwende statt dessen ein Datums-/Zeitfeld mit "Komponenten = TIME".
 MostDslValidator.FieldDateTimeInvalidStartTime=Zeitfelder dürfen nicht als Startdatum fungieren.
 MostDslValidator.FieldDateTimeInvalidEndTime=Zeitfelder dürfen nicht als Enddatum fungieren.
-MostDslValidator.FieldDecimalMinMustNotGreaterMax=Der Minimalwert darf nicht größer sein als der Maximalwert.
-MostDslValidator.FieldDecimalMustNotActAsPercentageAndCurrency=Ein Integer-Feld darf nicht gleichzeitig als prozentual und Währung agieren.
-MostDslValidator.FieldDecimalNeedsValidDefaultValue=Der Standardwert für ein Decimal-Feld muss eine Fließkommazahl sein.
-MostDslValidator.FieldDecimalScaleMustNotGreaterLength=Die Länge (Präzision) eines Decimal-Feldes muss größer sein als die Skalierung.
 MostDslValidator.FieldDefaultValueTooLong=Der Standardwert ist zu lang für die angegebene Feldlänge.
 MostDslValidator.FieldEmailNeedsValidDefaultValue=Der Standardwert für ein E-Mail-Feld muss eine gültige E-Mail-Adresse sein.
-MostDslValidator.FieldFloatMinMustNotGreaterMax=Der Minimalwert darf nicht größer sein als der Maximalwert.
-MostDslValidator.FieldFloatMustNotActAsPercentageAndCurrency=Ein Float-Feld darf nicht gleichzeitig als prozentual und Währung agieren.
-MostDslValidator.FieldFloatNeedsValidDefaultValue=Der Standardwert für ein Float-Feld muss eine Fließkommazahl sein.
 MostDslValidator.FieldIntegerLengthMustNotBeTooLarge=Die maximale Länge für ein Integer-Feld ist 18.
 MostDslValidator.FieldIntegerMinMustNotGreaterMax=Der Minimalwert darf nicht größer sein als der Maximalwert.
 MostDslValidator.FieldIntegerMustNotActAsPercentageAndRange=Ein Integer-Feld darf nicht gleichzeitig als prozentual und Bereich agieren.
@@ -184,6 +177,12 @@ MostDslValidator.FieldNameShouldBeLonger=Der Name des Feldes sollte eine Länge v
 MostDslValidator.FieldNameShouldStartWithLowerCase=Der Name des Feldes sollte mit einem Kleinbuchstaben beginnen.
 MostDslValidator.FieldNeedsContainer=Das Feld muss einem Datenobjekt oder einem Variablen-Container zugewiesen werden.
 MostDslValidator.FieldNeedsName=Jedes Feld muss einen Namen haben.
+MostDslValidator.FieldNumberDeprecatedDecimal=Dezimalfelder sind veraltet. Verwende statt dessen ein Nummernfeld mit "Nummerntyp = DECIMAL".
+MostDslValidator.FieldNumberDeprecatedFloat=Floatfelder sind veraltet. Verwende statt dessen ein Nummernfeld mit "Nummerntyp = FLOAT".
+MostDslValidator.FieldNumberMinMustNotGreaterMax=Der Minimalwert darf nicht größer sein als der Maximalwert.
+MostDslValidator.FieldNumberMustNotActAsPercentageAndCurrency=Ein Nummernfeld darf nicht gleichzeitig als prozentual und Währung agieren.
+MostDslValidator.FieldNumberNeedsValidDefaultValue=Der Standardwert für ein Nummernfeld muss eine Fließkommazahl sein.
+MostDslValidator.FieldNumberScaleMustNotGreaterLength=Die Länge (Präzision) eines Nummernfeldes muss größer sein als die Skalierung.
 MostDslValidator.FieldsMustBeUnique=Die Namen der Felder müssen eindeutig sein.
 MostDslValidator.FieldStringLengthMustNotBeGreaterMinLength=Die Größe des Strings muss größer sein als die minimale Länge.
 MostDslValidator.FieldStringLengthMustNotBeTooLarge=Die Größe des Strings darf nicht größer sein als 255; für größere Daten verwende Text-Felder.
