--- a/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
@@ -2,15 +2,12 @@
 MostDslQuickfixProvider.AddABooleanFieldTo=Ein Boolean-Feld zu '{0}' hinzufügen
 MostDslQuickfixProvider.AddACalculatedFieldTo=Ein berechnetes Feld zu '{0}' hinzufügen
 MostDslQuickfixProvider.AddACustomActionToTheController=Eine eigene Aktion zum Controller '{0}' hinzufügen
-MostDslQuickfixProvider.AddADateFieldTo=Ein Datumsfeld zu '{0}' hinzufügen
 MostDslQuickfixProvider.AddADatetimeFieldTo=Ein Zeitstempelfeld zu '{0}' hinzufügen
-MostDslQuickfixProvider.AddADecimalFieldTo=Ein Dezimalfeld zu '{0}' hinzufügen
 MostDslQuickfixProvider.AddADefaultEntityOrUseTheFirstOneIfExisting=Eine Standard-Entität hinzufügen oder die erste existierende verwenden
 MostDslQuickfixProvider.AddADeleteActionToTheController=Eine Delete-Aktion zum Controller '{0}' hinzufügen
 MostDslQuickfixProvider.AddADisplayActionToTheController=Eine Display-Aktion zum Controller '{0}' hinzufügen
 MostDslQuickfixProvider.AddADummyNameForTheImportedApplication=Einen Dummy-Namen für die importierte Anwendung hinzufügen
 MostDslQuickfixProvider.AddADummyUriExplainingTheFormat=Eine Dummy-URI zur Erklärung des Formates hinzufügen
-MostDslQuickfixProvider.AddAFloatFieldTo=Ein Fließkomma-Feld zu '{0}' hinzufügen
 MostDslQuickfixProvider.AddAListFieldTo=Ein Listenfeld zu '{0}' hinzufügen
 MostDslQuickfixProvider.AddAnEntityTo=Eine Entität zu '{0}' hinzufügen
 MostDslQuickfixProvider.AddAnIndexActionToTheController=Eine Index-Aktion zum Controller '{0}' hinzufügen
@@ -35,6 +32,7 @@ MostDslQuickfixProvider.AddAnInputFieldToTheSubContainer=Ein Eingabefeld zum Sub
 MostDslQuickfixProvider.AddAnIntegerFieldForStoringTheVersion=Ein Ganzzahl-Feld zur Speicherung der Version hinzufügen
 MostDslQuickfixProvider.AddAnIntegerFieldTo=Ein Ganzzahl-Feld zu '{0}' hinzufügen
 MostDslQuickfixProvider.AddAnObjectFieldTo=Ein Objektfeld zu '{0}' hinzufügen
+MostDslQuickfixProvider.AddANumberFieldTo=Ein Nummernfeld zu '{0}' hinzufügen
 MostDslQuickfixProvider.AddAnUploadFieldTo=Ein Uploadfeld zu '{0}' hinzufügen
 MostDslQuickfixProvider.AddAnUrlFieldTo=Ein URL-Feld zu '{0}' hinzufügen
 MostDslQuickfixProvider.AddAPluralNameForThisEntity=Einen Mehrfachnamen für diese Entität hinzufügen
@@ -43,16 +41,13 @@ MostDslQuickfixProvider.AddArrayField=Ein Array-Feld hinzufügen
 MostDslQuickfixProvider.AddAStringFieldForStoringTheZipcode=Ein Stringfeld zur Speicherung der Postleitzahl hinzufügen
 MostDslQuickfixProvider.AddAStringFieldTo=Ein Stringfeld zu '{0}' hinzufügen
 MostDslQuickfixProvider.AddATextFieldTo=Ein Textfeld zu '{0}' hinzufügen
-MostDslQuickfixProvider.AddATimeFieldTo=Ein Zeitfeld zu '{0}' hinzufügen
 MostDslQuickfixProvider.AddAUserFieldTo=Ein Benutzerfeld zu '{0}' hinzufügen
 MostDslQuickfixProvider.AddAuthor=Autor hinzufügen
 MostDslQuickfixProvider.AddAViewActionToTheController=Eine View-Aktion zum Controller '{0}' hinzufügen
 MostDslQuickfixProvider.AddBooleanField=Boolean-Feld hinzufügen
 MostDslQuickfixProvider.AddCalculatedField=Berechnetes Feld hinzufügen
 MostDslQuickfixProvider.AddCustomAction=Eigene Aktion hinzufügen
-MostDslQuickfixProvider.AddDateField=Datumsfeld hinzufügen
 MostDslQuickfixProvider.AddDatetimeField=Zeitstempel-Feld hinzufügen
-MostDslQuickfixProvider.AddDecimalField=Ein Dezimalfeld hinzufügen
 MostDslQuickfixProvider.AddDeleteAction=Eine Delete-Aktion hinzufügen
 MostDslQuickfixProvider.AddDisplayAction=Eine Display-Aktion hinzufügen
 MostDslQuickfixProvider.AddDummyName=Einen Dummy-Namen hinzufügen
@@ -62,7 +57,6 @@ MostDslQuickfixProvider.AddEmailAddressOfApplicationAuthor=E-Mail-Adresse des Au
 MostDslQuickfixProvider.AddEmailField=E-Mail-Feld hinzufügen
 MostDslQuickfixProvider.AddEntity=Entität hinzufügen
 MostDslQuickfixProvider.AddExampleUri=Beispiel-URI hinzufügen
-MostDslQuickfixProvider.AddFloatField=Fließkomma-Feld hinzufügen
 MostDslQuickfixProvider.AddIndexAction=Index-Aktion hinzufügen
 MostDslQuickfixProvider.AddIndexItem=Index-Eintrag hinzufügen
 MostDslQuickfixProvider.AddIntegerField=Ganzzahl-Feld hinzufügen
@@ -75,6 +69,7 @@ MostDslQuickfixProvider.AddMultipleName=Mehrfachname hinzufügen
 MostDslQuickfixProvider.AddName=Name hinzufügen
 MostDslQuickfixProvider.AddNameOfApplicationAuthor=Name des Autors der Anwendung hinzufügen
 MostDslQuickfixProvider.AddNameOfApplicationVendor=Name des Anbieters der Anwendung hinzufügen
+MostDslQuickfixProvider.AddNumberField=Ein Nummernfeld hinzufügen
 MostDslQuickfixProvider.AddObjectField=Objektfeld hinzufügen
 MostDslQuickfixProvider.AddOperand=Operand hinzufügen
 MostDslQuickfixProvider.AddOrUseFirst=Hinzufügen oder ersten verwenden
@@ -83,7 +78,6 @@ MostDslQuickfixProvider.AddPrefix=Präfix hinzufügen
 MostDslQuickfixProvider.AddStandardFieldsFlag=Flag für Standardfelder hinzufügen
 MostDslQuickfixProvider.AddStringField=String-Feld hinzufügen
 MostDslQuickfixProvider.AddTextField=Text-Feld hinzufügen
-MostDslQuickfixProvider.AddTimeField=Zeitfeld hinzufügen
 MostDslQuickfixProvider.AddUploadField=Upload-Feld hinzufügen
 MostDslQuickfixProvider.AddUrlField=URL-Feld hinzufügen
 MostDslQuickfixProvider.AddUserField=Benutzer-Feld hinzufügen
@@ -181,6 +175,8 @@ MostDslQuickfixProvider.MakeRelationsUnidirectional=Relationen unidirektional ma
 MostDslQuickfixProvider.NameOfImportedApplication=NameDerImportiertenAnwendung
 MostDslQuickfixProvider.ObsoleteDateTimeFieldMigrate=Veraltetes Feld migrieren
 MostDslQuickfixProvider.ObsoleteDateTimeFieldMigrateDescription=In ein Datums/Zeitfeld umwandeln
+MostDslQuickfixProvider.ObsoleteNumberFieldMigrate=Veraltetes Feld migrieren
+MostDslQuickfixProvider.ObsoleteNumberFieldMigrateDescription=In ein Nummernfeld umwandeln
 MostDslQuickfixProvider.ObsoleteVarsMigrate=Veraltete Variablen migrieren
 MostDslQuickfixProvider.ObsoleteVarsMigrateDescription=Variablen in normale Felder umwandeln
 MostDslQuickfixProvider.RaiseLength=Länge hochsetzen
