--- a/bundles/de.guite.modulestudio.sirius.design.nl1.de/OSGI-INF/l10n/bundle_de.properties
+++ b/bundles/de.guite.modulestudio.sirius.design.nl1.de/OSGI-INF/l10n/bundle_de.properties
@@ -69,7 +69,7 @@ elemSettingsContainer=Einstellungscontainer
 elemField=Feld
 elemBoolean=Boolesches
 elemInteger=Ganzzahl
-elemDecimal=Dezimalzahl
+elemNumber=Nummer
 elemString=Zeichenfolge
 elemText=Text
 elemEmail=E-Mail
@@ -80,7 +80,6 @@ elemUser=Benutzer
 elemArray=Array
 elemObject=Objekt
 elemDatetime=Datum/Zeit
-elemFloat=Flieﬂkommazahl
 elemIndexes=Indexe
 elemEntityIndex=Entit‰t Index
 elemEntityIndexItem=Entit‰t Index-Eintrag
