added new upload naming scheme for user defined file names

--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -691,6 +691,7 @@ _UI_EntityBlameableType_CHANGE_literal = CHANGE
 _UI_UploadNamingScheme_ORIGINALWITHCOUNTER_literal = ORIGINALWITHCOUNTER
 _UI_UploadNamingScheme_RANDOMCHECKSUM_literal = RANDOMCHECKSUM
 _UI_UploadNamingScheme_FIELDNAMEWITHCOUNTER_literal = FIELDNAMEWITHCOUNTER
+_UI_UploadNamingScheme_USERDEFINEDWITHCOUNTER_literal = USERDEFINEDWITHCOUNTER
 _UI_DateTimeComponents_DATE_TIME_literal = DATE_TIME
 _UI_DateTimeComponents_DATE_literal = DATE
 _UI_DateTimeComponents_TIME_literal = TIME
