added new relationship properties for permission inheritance

--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -542,6 +542,12 @@ _UI_OneToManyRelationship_bidirectional_feature = Bidirektional
 _UI_OneToManyRelationship_bidirectional_description = Ob dies eine unidirektionale oder eine bidirektionale Assoziation ist.
 _UI_ManyToManyRelationship_bidirectional_feature = Bidirektional
 _UI_ManyToManyRelationship_bidirectional_description = Ob dies eine unidirektionale oder eine bidirektionale Assoziation ist.
+_UI_OneToOneRelationship_inheritPermissions_feature = Zugriffsrechte vererben
+_UI_OneToOneRelationship_inheritPermissions_description = Ob die Sichtbarkeit der Quelle die Sichtbarkeit des Ziels beeinflusst.
+_UI_OneToManyRelationship_inheritPermissions_feature = Zugriffsrechte vererben
+_UI_OneToManyRelationship_inheritPermissions_description = Ob die Sichtbarkeit der Quelle die Sichtbarkeit des Ziels beeinflusst.
+_UI_ManyToManyRelationship_inheritPermissions_feature = Zugriffsrechte vererben
+_UI_ManyToManyRelationship_inheritPermissions_description = Ob und wie die Sichtbarkeit der Quelle die Sichtbarkeit des Ziels beeinflusst.
 _UI_OneToOneRelationship_editType_feature = Edit-Typ
 _UI_OneToOneRelationship_editType_description = Welche Operationen auf jeder Seite während der Bearbeitung möglich sein sollen (Objekt wählen, neue erstellen, bestehende bearbeiten).
 _UI_OneToManyRelationship_editType_feature = Edit-Typ
@@ -758,6 +764,9 @@ _UI_FieldDisplayType_DISPLAY_literal = DISPLAY
 _UI_FieldDisplayType_DISPLAY_SORTING_literal = DISPLAY_SORTING
 _UI_FieldDisplayType_VIEW_DISPLAY_literal = VIEW_DISPLAY
 _UI_FieldDisplayType_ALL_literal = ALL
+_UI_ManyToManyPermissionInheritanceType_NONE_literal = NONE
+_UI_ManyToManyPermissionInheritanceType_AFFIRMATIVE_literal = AFFIRMATIVE
+_UI_ManyToManyPermissionInheritanceType_UNANIMOUS_literal = UNANIMOUS
 _UI_RelationAutoCompletionUsage_NONE_literal = NONE
 _UI_RelationAutoCompletionUsage_ONLY_SOURCE_SIDE_literal = ONLY_SOURCE_SIDE
 _UI_RelationAutoCompletionUsage_ONLY_TARGET_SIDE_literal = ONLY_TARGET_SIDE
