added basic support for embedded forms

--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -534,8 +534,6 @@ _UI_JoinRelationship_cascadeReverse_feature = Kaskade Rückweg
 _UI_JoinRelationship_cascadeReverse_description = Kaskade-Optionen auf Anwendungsebene aus Target-Sicht.
 _UI_JoinRelationship_onDelete_feature = Bei Delete
 _UI_JoinRelationship_onDelete_description = Kaskade-Option für Delete-Operationen auf Datenbankebene.
-_UI_JoinRelationship_editType_feature = Edit-Typ
-_UI_JoinRelationship_editType_description = Welche Operationen auf jeder Seite während dem Editieren möglich sein sollen (Objekt wählen, neue anlegen, bestehende editieren).
 _UI_OneToOneRelationship_bidirectional_feature = Bidirektional
 _UI_OneToOneRelationship_bidirectional_description = Ob dies eine unidirektionale oder eine bidirektionale Assoziation ist.
 _UI_OneToManyRelationship_bidirectional_feature = Bidirektional
@@ -556,6 +554,20 @@ _UI_ManyToOneRelationship_editType_feature = Edit-Typ
 _UI_ManyToOneRelationship_editType_description = Welche Operationen auf jeder Seite während der Bearbeitung möglich sein sollen (Objekt wählen, neue erstellen, bestehende bearbeiten).
 _UI_ManyToManyRelationship_editType_feature = Edit-Typ
 _UI_ManyToManyRelationship_editType_description = Welche Operationen auf jeder Seite während der Bearbeitung möglich sein sollen (Objekt wählen, neue erstellen, bestehende bearbeiten).
+_UI_OneToOneRelationship_sourceEditing_feature = Bearbeitung Quelle
+_UI_OneToOneRelationship_sourceEditing_description = Mögliche Operationen für Zielelemente beim Bearbeiten der Quellseite.
+_UI_OneToOneRelationship_targetEditing_feature = Bearbeitung Ziel
+_UI_OneToOneRelationship_targetEditing_description = Mögliche Operationen für Quellelemente beim Bearbeiten der Zielseite.
+_UI_OneToManyRelationship_sourceEditing_feature = Bearbeitung Quelle
+_UI_OneToManyRelationship_sourceEditing_description =Mögliche Operationen für Zielelemente beim Bearbeiten der Quellseite.
+_UI_OneToManyRelationship_targetEditing_feature = Bearbeitung Ziel
+_UI_OneToManyRelationship_targetEditing_description = Mögliche Operationen für Quellelemente beim Bearbeiten der Zielseite.
+_UI_ManyToOneRelationship_sourceEditing_feature = Bearbeitung Quelle
+_UI_ManyToOneRelationship_sourceEditing_description = Mögliche Operationen für Zielelemente beim Bearbeiten der Quellseite.
+_UI_ManyToManyRelationship_sourceEditing_feature = Bearbeitung Quelle
+_UI_ManyToManyRelationship_sourceEditing_description = Mögliche Operationen für Zielelemente beim Bearbeiten der Quellseite.
+_UI_ManyToManyRelationship_targetEditing_feature = Bearbeitung Ziel
+_UI_ManyToManyRelationship_targetEditing_description = Mögliche Operationen für Quellelemente beim Bearbeiten der Zielseite.
 _UI_OneToOneRelationship_orphanRemoval_feature = Waisen entfernen
 _UI_OneToOneRelationship_orphanRemoval_description = Ob Waisen automatisch entfernt werden sollen oder nicht.
 _UI_OneToOneRelationship_primaryKey_feature = Primärschlüssel
@@ -781,6 +793,10 @@ _UI_RelationEditType_ACTIVE_CHOOSE_PASSIVE_NONE_literal = ACTIVE_CHOOSE_PASSIVE_
 _UI_RelationEditType_ACTIVE_EDIT_PASSIVE_CHOOSE_literal = ACTIVE_EDIT_PASSIVE_CHOOSE
 _UI_RelationEditType_ACTIVE_EDIT_PASSIVE_EDIT_literal = ACTIVE_EDIT_PASSIVE_EDIT
 _UI_RelationEditType_ACTIVE_EDIT_PASSIVE_NONE_literal = ACTIVE_EDIT_PASSIVE_NONE
+_UI_RelationEditMode_NONE_literal = NONE
+_UI_RelationEditMode_CHOOSE_literal = CHOOSE
+_UI_RelationEditMode_INLINE_literal = INLINE
+_UI_RelationEditMode_EMBEDDED_literal = EMBEDDED
 _UI_InheritanceStrategyType_SINGLE_TABLE_literal = SINGLE_TABLE
 _UI_InheritanceStrategyType_JOINED_literal = JOINED
 
