--- a/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -220,6 +220,7 @@ MostDslValidator.RelationshipInheritanceMustNotIncludeDiscriminatorColumnAsField
 MostDslValidator.RelationshipInheritanceNeedsDiscriminatorColumn=Das Attribut discriminatorColumn darf nicht leer sein für Vererbungsbeziehungen.
 MostDslValidator.RelationshipInheritanceNoCyclesAllowed=Vererbungszyklen sind nicht erlaubt.
 MostDslValidator.RelationshipJoinCustomNeedsEqualTypes=Die Felder {0} und {1} müssen den gleichen Typ und die gleiche Länge haben.
+MostDslValidator.RelationshipJoinEmbeddedEditingForMultiValuedSide=Eingebettete Bearbeitung wird für mehrwertige Seiten einer Assoziation (noch) nicht unterstützt.
 MostDslValidator.RelationshipJoinManyToManyNeedsRefClass=Eine Viele-zu-Viele-Beziehung muss das refClass-Attribut definieren.
 MostDslValidator.RelationshipJoinManyToManyNeedsValidOrderBySourceField=Das Attribut orderByReverse zeigt auf ein ungültiges Feld der Quell-Entität.
 MostDslValidator.RelationshipJoinManyToManyNeedsValidOrderByTargetField=Das Attribut orderBy zeigt auf ein ungültiges Feld der Ziel-Entität.
