--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -178,6 +178,8 @@ _UI_SettingsContainer_generateTests_feature = Tests generieren
 _UI_SettingsContainer_generateTests_description = Ob Testfälle generiert werden sollen oder nicht.
 _UI_SettingsContainer_writeModelToDocs_feature = Modell in Docs schreiben
 _UI_SettingsContainer_writeModelToDocs_description = Ob die Modelldatei und das Diagrammbild in den docs-Ordner des Moduls geschrieben werden.
+_UI_SettingsContainer_generateTechnicalDocumentation_feature = Technische Dokumentation generieren
+_UI_SettingsContainer_generateTechnicalDocumentation_description = Ob eigenständige HTML-Dateien mit technischer Dokumentation generiert werden sollen oder nicht.
 _UI_ReferredApplication_minVersion_feature = Minimale Version
 _UI_ReferredApplication_minVersion_description = Die minimale Version.
 _UI_ReferredApplication_maxVersion_feature = Maximale Version
