updated constraint description

--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -447,9 +447,9 @@ _UI_ArrayField_length_description = Die Länge dieses Feldes.
 _UI_ArrayField_arrayType_feature = Array-Typ
 _UI_ArrayField_arrayType_description = Welcher Array-Typ verwendet wird.
 _UI_ArrayField_min_feature = Min
-_UI_ArrayField_min_description = Minimale Anzahl von Einträgen, deren Vorhandensein erzwungen wird. Muss zusammen mit max verwendet werden.
+_UI_ArrayField_min_description = Minimale Anzahl von Einträgen, deren Vorhandensein erzwungen wird.
 _UI_ArrayField_max_feature = Max
-_UI_ArrayField_max_description = Maximale Anzahl von Einträgen, deren Vorhandensein erzwungen wird. Muss zusammen mit min verwendet werden.
+_UI_ArrayField_max_description = Maximale Anzahl von Einträgen, deren Vorhandensein erzwungen wird.
 _UI_DatetimeField_components_feature = Komponenten
 _UI_DatetimeField_components_description = Welche Datums-/Zeitkomponenten aktiviert sind.
 _UI_DatetimeField_past_feature Vergangenheit
@@ -581,9 +581,9 @@ _UI_OneToManyRelationship_indexBy_description = Optionaler Feldname, der für ein
 _UI_OneToManyRelationship_orphanRemoval_feature = Waisen entfernen
 _UI_OneToManyRelationship_orphanRemoval_description = Ob Waisen automatisch entfernt werden sollen oder nicht.
 _UI_OneToManyRelationship_minTarget_feature = Min Ziel
-_UI_OneToManyRelationship_minTarget_description = Minimale Anzahl von Einträgen, deren Vorhandensein auf der Zielseite erzwungen wird. Muss zusammen mit maxTarget verwendet werden.
+_UI_OneToManyRelationship_minTarget_description = Minimale Anzahl von Einträgen, deren Vorhandensein auf der Zielseite erzwungen wird.
 _UI_OneToManyRelationship_maxTarget_feature = Max Ziel
-_UI_OneToManyRelationship_maxTarget_description = Maximale Anzahl von Einträgen, deren Vorhandensein auf der Zielseite erzwungen wird. Muss zusammen mit minTarget verwendet werden.
+_UI_OneToManyRelationship_maxTarget_description = Maximale Anzahl von Einträgen, deren Vorhandensein auf der Zielseite erzwungen wird.
 _UI_ManyToOneRelationship_primaryKey_feature = Primärschlüssel
 _UI_ManyToOneRelationship_primaryKey_description = Ob dies eine Primary Key Relation ist oder nicht.
 _UI_ManyToOneRelationship_sortableGroup_feature = Sortable-Gruppe
@@ -599,13 +599,13 @@ _UI_ManyToManyRelationship_indexBy_description = Optionaler Feldname, der für ei
 _UI_ManyToManyRelationship_orphanRemoval_feature = Waisen entfernen
 _UI_ManyToManyRelationship_orphanRemoval_description = Ob Waisen automatisch entfernt werden sollen oder nicht.
 _UI_ManyToManyRelationship_minSource_feature = Min Quelle
-_UI_ManyToManyRelationship_minSource_description = Minimale Anzahl von Einträgen, deren Vorhandensein auf der Quellseite erzwungen wird. Muss zusammen mit maxSource verwendet werden.
+_UI_ManyToManyRelationship_minSource_description = Minimale Anzahl von Einträgen, deren Vorhandensein auf der Quellseite erzwungen wird.
 _UI_ManyToManyRelationship_maxSource_feature = Max Quelle
-_UI_ManyToManyRelationship_maxSource_description = Maximale Anzahl von Einträgen, deren Vorhandensein auf der Quellseite erzwungen wird. Muss zusammen mit minSource verwendet werden.
+_UI_ManyToManyRelationship_maxSource_description = Maximale Anzahl von Einträgen, deren Vorhandensein auf der Quellseite erzwungen wird.
 _UI_ManyToManyRelationship_minTarget_feature = Min Ziel
-_UI_ManyToManyRelationship_minTarget_description = Minimale Anzahl von Einträgen, deren Vorhandensein auf der Zielseite erzwungen wird. Muss zusammen mit maxTarget verwendet werden.
+_UI_ManyToManyRelationship_minTarget_description = Minimale Anzahl von Einträgen, deren Vorhandensein auf der Zielseite erzwungen wird.
 _UI_ManyToManyRelationship_maxTarget_feature = Max Ziel
-_UI_ManyToManyRelationship_maxTarget_description = Maximale Anzahl von Einträgen, deren Vorhandensein auf der Zielseite erzwungen wird. Muss zusammen mit minTarget verwendet werden.
+_UI_ManyToManyRelationship_maxTarget_description = Maximale Anzahl von Einträgen, deren Vorhandensein auf der Zielseite erzwungen wird.
 _UI_InheritanceRelationship_strategy_feature = Strategie
 _UI_InheritanceRelationship_strategy_description = Die für diese Relation zu verwendende Vererbungsstrategie.
 _UI_InheritanceRelationship_discriminatorColumn_feature = Discriminator Column
