added support for different placements and styles for item actions

--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -180,6 +180,18 @@ _UI_SettingsContainer_writeModelToDocs_feature = Modell in Docs schreiben
 _UI_SettingsContainer_writeModelToDocs_description = Ob die Modelldatei und das Diagrammbild in den docs-Ordner des Moduls geschrieben werden.
 _UI_SettingsContainer_generateTechnicalDocumentation_feature = Technische Dokumentation generieren
 _UI_SettingsContainer_generateTechnicalDocumentation_description = Ob eigenständige HTML-Dateien mit technischer Dokumentation generiert werden sollen oder nicht.
+_UI_SettingsContainer_viewActionsPosition_feature = View Aktionen Position
+_UI_SettingsContainer_viewActionsPosition_description = Ob und wo Aktionen für einen Eintrag auf Übersichtsseiten verfügbar sein sollen.
+_UI_SettingsContainer_viewActionsStyle_feature = View Aktionen Stil
+_UI_SettingsContainer_viewActionsStyle_description = Der von den Aktionen für einen Eintrag auf Übersichtsseiten verwendete Stil.
+_UI_SettingsContainer_viewActionsWithIcons_feature = View Aktionen mit Icons
+_UI_SettingsContainer_viewActionsWithIcons_description = Ob Aktionen für einen Eintrag auf Übersichtsseiten ein Icon zusätzlich zu ihrem Label enthalten sollen oder nicht.
+_UI_SettingsContainer_displayActionsPosition_feature = Display Aktionen Position
+_UI_SettingsContainer_displayActionsPosition_description = Ob und wo Aktionen für einen Eintrag auf Detailseiten verfügbar sein sollen.
+_UI_SettingsContainer_displayActionsStyle_feature = Display Aktionen Stil
+_UI_SettingsContainer_displayActionsStyle_description = Der von den Aktionen für einen Eintrag auf Detailseiten verwendete Stil.
+_UI_SettingsContainer_displayActionsWithIcons_feature = Display Aktionen mit Icons
+_UI_SettingsContainer_displayActionsWithIcons_description = Ob Aktionen für einen Eintrag auf Detailseiten ein Icon zusätzlich zu ihrem Label enthalten sollen oder nicht.
 _UI_ReferredApplication_minVersion_feature = Minimale Version
 _UI_ReferredApplication_minVersion_description = Die minimale Version.
 _UI_ReferredApplication_maxVersion_feature = Maximale Version
@@ -654,6 +666,15 @@ _UI_CoreVersion_ZK20_literal = ZK20
 _UI_CoreVersion_ZK2DEV_literal = ZK2DEV
 _UI_CoreVersion_ZK15_literal = ZK15
 _UI_CoreVersion_ZK15DEV_literal = ZK15DEV
+_UI_ItemActionsPosition_NONE_literal = NONE
+_UI_ItemActionsPosition_START_literal = START
+_UI_ItemActionsPosition_END_literal = END
+_UI_ItemActionsPosition_BOTH_literal = BOTH
+_UI_ItemActionsStyle_LINK_literal = LINK
+_UI_ItemActionsStyle_ICON_literal = ICON
+_UI_ItemActionsStyle_BUTTON_literal = BUTTON
+_UI_ItemActionsStyle_BUTTON_GROUP_literal = BUTTON_GROUP
+_UI_ItemActionsStyle_DROPDOWN_literal = DROPDOWN
 _UI_ApplicationDependencyType_REQUIREMENT_literal = REQUIREMENT
 _UI_ApplicationDependencyType_RECOMMENDATION_literal = RECOMMENDATION
 _UI_ApplicationDependencyType_CONFLICT_literal = CONFLICT
