--- a/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -252,9 +252,11 @@ MostDslValidator.RelationshipTargetAliasesMustBeUnique=Die Ziel-Aliase der Bezie
 MostDslValidator.RelationshipTargetAliasesMustNotBeNamedLikeField=Die Ziel-Aliase der Beziehung dürfen nicht so heißen wie ein Feld der Quell-Entität.
 MostDslValidator.RelationshipTargetAliasNameMustBeLonger=Das Ziel-Alias der Beziehung muss eine Länge von mindestens zwei Zeichen haben.
 MostDslValidator.RelationshipTargetAliasNameShouldBeLonger=Das Ziel-Alias der Beziehung sollte eine Länge von mindestens vier Zeichen haben.
-MostDslValidator.SettingsContainerNeedsApplication=Einstellungen müssen einer Anwendung zugewiesen werden.
 MostDslValidator.SettingsContainerDetailBlockWithoutFinder=Der Detailblock benötigt externen Controller und Finder-Komponente.
-MostDslValidator.SettingsContainerDetailContentTypeWithoutFinder=Det Detail-ContentType benötigt externen Controller und Finder-Komponente.
+MostDslValidator.SettingsContainerDetailContentTypeWithoutFinder=Der Detail-ContentType benötigt externen Controller und Finder-Komponente.
+MostDslValidator.SettingsContainerItemActionsInvalidIconsStyle=Das Flag für Icons in Eintragsaktionen darf nicht deaktiviert werden, wenn der Stil der Aktionen so konfiguriert ist, dass nur Icons verwendet werden sollen.
+MostDslValidator.SettingsContainerItemActionsInvalidViewPosition=Die Position both darf nicht für Eintragsaktionen für Übersichtsseiten aktiviert werden.
+MostDslValidator.SettingsContainerNeedsApplication=Einstellungen müssen einer Anwendung zugewiesen werden.
 MostDslValidator.SettingsContainerScribiteWithoutFinder=Scribite Plugins benötigen externen Controller und Finder-Komponente.
 MostDslValidator.VarContainerHasObsoleteVariables=Variablen sind veraltet, verwende statt dessen normale Felder.
 MostDslValidator.VarContainerNameMustBeUnique=Die Namen der Variablen-Container müssen eindeutig sein.
