--- a/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
@@ -97,7 +97,6 @@ MostDslQuickfixProvider.ChangeFieldNameTo=Namen des Feldes in '{0}' verändern
 MostDslQuickfixProvider.ChangeLockType=Lock-Typ verändern
 MostDslQuickfixProvider.ChangeOutgoingRelationshipsByDisablingTheBidirectionalFlag=Ausgehende Beziehungen verändern durch Deaktivieren des bidirektional-Flags
 MostDslQuickfixProvider.ChangePrefixToLowerCaseAlphanumericText=Präfix in kleingeschriebenen alphanumerischen Text verändern
-MostDslQuickfixProvider.ChangeStrategy=Strategie verändern
 MostDslQuickfixProvider.ChangeTheEntityByDisablingTheGeographicalFlag=Die Entität verändern durch Deaktivieren des Flags für geographische Daten
 MostDslQuickfixProvider.ChangeTheEntityByDisablingTheLoggableFlag=Die Entität verändern durch Deaktivieren des Loggable-Flags
 MostDslQuickfixProvider.ChangeTheEntityNameByAppendingTheWordObject=Den Namen der Entität durch Anhängen des Wortes Object verändern
@@ -137,6 +136,7 @@ MostDslQuickfixProvider.DisableScribitePluginsDesc=Generierung von Plugins für m
 MostDslQuickfixProvider.DropPrimaryKeyFlags=Primärschlüssel-Flags zurücksetzen
 MostDslQuickfixProvider.EnableExternalController=Externen Controller aktivieren
 MostDslQuickfixProvider.EnableExternalControllerDesc=Generierung des externen Controllers und der Finder-Komponente aktivieren
+MostDslQuickfixProvider.EnableIconsFlag=Das icons-Flag aktivieren
 MostDslQuickfixProvider.ExampleForAnotherModel=library/another.mostdsl
 MostDslQuickfixProvider.Extend=Erweitern
 MostDslQuickfixProvider.IncreaseFieldLength=Feldlänge erhöhen
@@ -245,7 +245,9 @@ MostDslQuickfixProvider.SetEntityLockTypeToPessimisticRead=Lock-Typ der Entität 
 MostDslQuickfixProvider.SetEntityLockTypeToPessimisticReadWithPageLockSupport=Lock-Typ der Entität auf pessimistisches Lesen mit PageLock-Support setzen
 MostDslQuickfixProvider.SetMaximumLimitToZero=Das Maximallimit auf null setzen
 MostDslQuickfixProvider.SetMinimumLimitToZero=Das Minimallimit auf null setzen
-MostDslQuickfixProvider.SetsTheIdentifierStrategyToNone=Die Identifier-Strategie auf NONE setzen
+MostDslQuickfixProvider.SetPlacementToNone=Platzierung auf none setzen
+MostDslQuickfixProvider.SetPlacementToStart=Platzierung auf start setzen
+MostDslQuickfixProvider.SetPlacementToEnd=Platzierung auf end setzen
 MostDslQuickfixProvider.SetTheDefaultValueToAFixedExample=Den Standardwert auf ein fixes Beispiel setzen
 MostDslQuickfixProvider.SetTheDefaultValueToNow=Den Standardwert auf now setzen
 MostDslQuickfixProvider.SetToExample=Auf Beispiel setzen
