added missing defines

--- a/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
@@ -288,6 +288,10 @@ MostDslQuickfixProvider.UseAsStartDate=Als Startdatum verwenden
 MostDslQuickfixProvider.UseFirst=Den ersten verwenden
 MostDslQuickfixProvider.UseFirstOne=Den ersten verwenden
 MostDslQuickfixProvider.UseSemanticRole=Semantische Rolle verwenden
+MostDslQuickfixProvider.UseStyleLinks=Normale Links statt Icon-Links verwenden
+MostDslQuickfixProvider.UseStyleButtons=Buttons statt Icon-Links verwenden
+MostDslQuickfixProvider.UseStyleButtonGroup=Eine Button Group statt Icon-Links verwenden
+MostDslQuickfixProvider.UseStyleDropdown=Ein Dropdown-Menü statt Icon-Links verwenden
 MostDslQuickfixProvider.UseTheFirstActionRemoveTheOthers=Die erste Aktion verwenden, die anderen entfernen
 MostDslQuickfixProvider.UseTheFirstDefaultItemUnsetTheDefaultFlagForAllOtherOnes=Den ersten Standardeintrag verwenden, das Standard-Flag für alle anderen entfernen
 MostDslQuickfixProvider.UseTheFirstEntityAsTheLeadingOne=Die erste Entität als führende verwenden
