deprecated nospace flag

--- a/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -197,6 +197,7 @@ MostDslValidator.FieldStringLengthNotLargeEnoughForLocale=Die String-Länge für S
 MostDslValidator.FieldStringLengthNotLargeEnoughForTimezone=Die String-Länge für Zeitzonen muss mindestens 30 Zeichen betragen.
 MostDslValidator.FieldStringLengthNotLargeEnoughForUuid=Die String-Länge für UUIDs muss mindestens 36 Zeichen betragen.
 MostDslValidator.FieldStringMustBeOneOfExclusiveProperties=Ein String kann nur eine spezielle Semantik haben (Rolle, ISBN, ISSN, IP-Adresse).
+MostDslValidator.FieldStringNospaceDeprecated=Die nospace-Eigenschaft ist veraltet. Verwende den regexp-Validator statt dessen, sofern nötig.
 MostDslValidator.FieldTextBlobMustNotBeUnique=Felder, welche Text- oder Blob-Datentypen verwenden, dürfen nicht eindeutig (unique) sein (gilt für Text-, Array- und Objektfelder).
 MostDslValidator.FieldTimeNeedsValidDefaultValue=Der Standardwert für ein Zeit-Feld muss dem Muster HH:MM:SS entsprechen oder now lauten.
 MostDslValidator.FieldUploadInvalidImageDimensions=Entweder Quadrat- oder Querformat- oder Hochformat-Bilder müssen erlaubt sein.
