added some features introduced in Symfony 3.4

--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -475,6 +475,10 @@ _UI_UploadField_minHeight_feature = Minimale Höhe
 _UI_UploadField_minHeight_description = Minimale Bildhöhe in Pixeln (0 = kein Limit).
 _UI_UploadField_maxHeight_feature = Maximale Höhe
 _UI_UploadField_maxHeight_description = Maximale Bildhöhe in Pixeln (0 = kein Limit).
+_UI_UploadField_minPixels_feature = Minimale Pixel
+_UI_UploadField_minPixels_description = Minimale Menge an Pixeln (0 = kein Limit).
+_UI_UploadField_maxPixels_feature = Maximale Pixel
+_UI_UploadField_maxPixels_description = Maximale Menge an Pixeln (0 = kein Limit).
 _UI_UploadField_minRatio_feature = Minimales Verhältnis
 _UI_UploadField_minRatio_description = Minimales Seitenverhältnis (Breite / Höhe) (0 = kein Limit).
 _UI_UploadField_maxRatio_feature = Maximales Verhältnis
@@ -515,6 +519,8 @@ _UI_ArrayField_max_feature = Max
 _UI_ArrayField_max_description = Maximale Anzahl von Einträgen, deren Vorhandensein erzwungen wird.
 _UI_DatetimeField_components_feature = Komponenten
 _UI_DatetimeField_components_description = Welche Datums-/Zeitkomponenten aktiviert sind.
+_UI_DatetimeField_immutable_feature = Unveränderbar
+_UI_DatetimeField_immutable_description = Ob der Wert unveränderbar ist oder nicht.
 _UI_DatetimeField_past_feature Vergangenheit
 _UI_DatetimeField_past_description = Ob dieser Wert in der Vergangenheit liegen muss oder nicht.
 _UI_DatetimeField_future_feature = Zukunft
@@ -705,6 +711,7 @@ _UI_StringRole_IBAN_literal = IBAN
 _UI_StringRole_LANGUAGE_literal = LANGUAGE
 _UI_StringRole_LOCALE_literal = LOCALE
 _UI_StringRole_PASSWORD_literal = PASSWORD
+_UI_StringRole_PHONE_NUMBER_literal = PHONE_NUMBER
 _UI_StringRole_TIME_ZONE_literal = TIME_ZONE
 _UI_StringRole_UUID_literal = UUID
 _UI_IpAddressScope_NONE_literal = NONE
